--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ button.close {
         border: none;
     }
     .navbar-default .navbar-toggle .icon-bar {
-        background-color: #fff;
+        background-color: #333;
         position: relative;
         width: 50px;
         height: 6px;
