--- a/css/style.css
+++ b/css/style.css
@@ -198,9 +198,49 @@ button.close {
     right: 0;
 }
 .title-page {
-    padding:10px;
-    text-align:center;
-    position:relative;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 40px;
+}
+.goods-block-main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.goods-main-img img {
+    width: 100%;
+}
+.goods-block-item {
+    width: 24%;
+    position: relative;
+    margin-bottom: 20px;
+}
+.good-main-link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 11;
+    top: 0;
+}
+.good-main-link a {
+    color: #fff;
+    border-bottom-color: #fff;
+}
+.good-main-link:hover a:after {
+    content: '';
+    width: 100%;
+    height: 10px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.good-main-link {
+    background-color: rgba(0, 0, 0, 0.5);
 }
 @media (min-width: 768px) {
     .navbar-nav {
