--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ a:focus, a:hover {
     border-bottom: transparent;
 }
 .fancy-btn{
-    display: block;
     position:relative;
     padding:10px 20px;
     border:2px solid #333;
@@ -79,6 +78,9 @@ a:focus, a:hover {
     border-right: 0;
     border-left: 0;
     border-top: 0;
+    display: block;
+    margin-top: 20px;
+    margin-left: auto;
 }
 .header-order button:focus {
     outline: none;
@@ -207,6 +209,7 @@ button.close {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 .goods-main-img img {
     width: 100%;
@@ -215,6 +218,11 @@ button.close {
     width: 24%;
     position: relative;
     margin-bottom: 20px;
+    overflow: hidden;
+    transition: all .3s linear;
+}
+.goods-block-item:hover {
+    border-radius: 70%;
 }
 .good-main-link {
     position: absolute;
@@ -229,18 +237,23 @@ button.close {
 .good-main-link a {
     color: #fff;
     border-bottom-color: #fff;
+    font-weight: bold;
+    text-align: center;
 }
-.good-main-link:hover a:after {
-    content: '';
-    width: 100%;
-    height: 10px;
-    background-color: #fff;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+.good-main-link a:hover {
+    border-bottom-color: transparent;
 }
 .good-main-link {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: all .3s linear;
+}
+.good-main-link:hover {
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 70%;
+}
+.button-center {
+    text-align: center;
+    margin-bottom: 40px;
 }
 @media (min-width: 768px) {
     .navbar-nav {
@@ -318,6 +331,9 @@ button.close {
         margin-right: 5px;
     }
     .logo-block-header {
+        width: 48%;
+    }
+    .goods-block-item {
         width: 48%;
     }
 }
