--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ button.close {
     grid-template-rows: repeat(8, 5vw);
     grid-gap: 1.5rem;
     margin-bottom: 40px;
+    filter: grayscale(1);
 }
 
 .gallery__img {
