--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ a:focus, a:hover {
     justify-content: space-between;
     align-items: center;
     padding: 15px 0;
+    font-weight: bold;
 }
 .header-time {
     display: flex;
@@ -471,6 +472,18 @@ button.close {
     color: #fff;
     text-decoration: none;
 }
+.owl-shares-item {
+    padding: 0 15px;
+}
+.owl-shares-desk {
+    height: 50px;
+    margin-top: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+.owl-shares {
+    margin-bottom: 40px;
+}
 @media (min-width: 768px) {
     .navbar-nav {
         display: flex;
@@ -619,5 +632,8 @@ button.close {
     }
     .footer-pay-time {
         width: 100%;
+    }
+    .owl-shares-item {
+        padding: 0;
     }
 }
