--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,60 @@ button.close {
     margin-bottom: 20px;
     text-align: right;
 }
+.news-block {
+    border: 1px solid #cbcbcb;
+    margin-bottom: 25px;
+    display: flex;
+    align-items: center;
+}
+.news-block-img {
+    width: 25%;
+    padding: 15px;
+    text-align: center;
+    vertical-align: middle;
+}
+.news-block-img img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.news-block-body {
+    width: 75%;
+    text-align: left;
+    padding: 0 10px;
+}
+.news-block-body h3 {
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.read-later:hover, .news-block-body h3 a {
+    border-bottom: none;
+}
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
+}
+.ditto_currentpage {
+    color: #333;
+    background-color: #fff;
+    border: 1px solid #333;
+    padding: 5px 10px;
+    margin-right: 2px;
+    border-radius: 4px;
+}
+.ditto_page {
+    padding: 4.5px 10px;
+    color: #fff;
+    background-color: #333;
+    text-decoration: none;
+    border: 1px solid #333;
+    border-radius: 4px;
+}
+.ditto_page:hover {
+    background-color: #fff;
+}
 @media (min-width: 768px) {
     .navbar-nav {
         display: flex;
@@ -775,6 +829,15 @@ button.close {
     }
     .good-main-content-img {
         width: 140px;
+    }
+    .news-block {
+        flex-direction: column;
+    }
+    .news-block-img, .news-block-body {
+        width: 100%;
+    }
+    .read-later-block {
+        margin-bottom: 30px;
     }
 }
 @media(max-width: 478px) {
