--- a/css/style.css
+++ b/css/style.css
@@ -697,6 +697,70 @@ button.close {
 .ditto_page:hover {
     background-color: #fff;
 }
+.price-list-links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+    padding-left: 0;
+}
+.price-list-links li {
+    list-style: none;
+}
+.price-list-links li a {
+    position: relative;
+    display: block;
+    margin: 0 10px;
+    padding: 5px 10px;
+    color: #333;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.5s;
+    overflow: hidden;
+}
+.price-list-links li a::before {
+    content: '';
+    position: absolute;
+    top: calc(50% - 2px);
+    left: -100%;
+    width: 100%;
+    height: 4px;
+    background: #333;
+    transition: 0.5s;
+}
+.price-list-links li a:hover {
+    color: #fff;
+}
+.price-list-links li a:hover::before {
+    animation: animate .5s linear forwards;
+}
+.price-block-content table {
+    width: 100%;
+}
+.price-block-content table td, .price-block-content table th {
+    border: 1px solid #333;
+    padding: 7px;
+}
+@keyframes animate {
+    0% {
+        top: calc(50% - 2px);
+        left: -100%;
+        height: 4px;
+        z-index: 1;
+    }
+    50% {
+        top: calc(50% - 2px);
+        left: 0;
+        height: 4px;
+        z-index: 1;
+    }
+    100% {
+        top: 0;
+        left: 0;
+        height: 100%;
+        z-index: -1;
+    }
+}
 @media (min-width: 768px) {
     .navbar-nav {
         display: flex;
@@ -838,6 +902,12 @@ button.close {
     }
     .read-later-block {
         margin-bottom: 30px;
+    }
+    .price-block-content table {
+        font-size: 14px;
+    }
+    .price-block-content table td, .price-block-content table th {
+        padding: 3px;
     }
 }
 @media(max-width: 478px) {
