--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,27 @@ button.close {
     border-bottom: none;
     color: #333;
     font-weight: bold;
+    overflow: hidden;
+}
+.navbar-default .navbar-nav > li > a:hover {
+    color: #fff;
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: #fff;
+    background-color: #333;
+}
+.navbar-default .navbar-nav > li > a:hover::before {
+    animation: animate .5s linear forwards;
+}
+.navbar-default .navbar-nav > li > a:before {
+    content: '';
+    position: absolute;
+    top: calc(50% - 2px);
+    left: -100%;
+    width: 100%;
+    height: 4px;
+    background: #333;
+    transition: 0.5s;
 }
 .dropdown-menu li:last-child a {
     border-bottom: none;
