--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ a:focus, a:hover {
     text-decoration: none;
     color: #333;
 }
+body {
+    background: rgba(0,0,0,0.6);
+}
 .header-main-page {
     display: flex;
     justify-content: space-between;
@@ -34,7 +37,18 @@ a:focus, a:hover {
     width: 100%;
 }
 .header-line-block {
-    border-bottom: 3px solid #333;
+    border-bottom: 3px solid #fff;
+    position: absolute;
+    top: 0;
+    z-index: 11;
+    width: 100%;
+    color: #fff;
+}
+.header-line-block a {
+    color: #fff;
+}
+.black-line-menu {
+    border-top: 3px solid #fff;
 }
 .header-feedback a:hover {
     border-bottom: transparent;
@@ -42,8 +56,8 @@ a:focus, a:hover {
 .fancy-btn{
     position:relative;
     padding:10px 20px;
-    border:2px solid #333;
-    color:#333;
+    border:2px solid #fff;
+    color:#fff;
     font-size:20px;
     text-decoration:none;
     margin:10px auto;
@@ -52,7 +66,7 @@ a:focus, a:hover {
 }
 .fancy-btn:after{
     content:" ";
-    border: #333;
+    border: #fff;
     display:inline-block;
     width:100%;
     height:100%;
@@ -65,17 +79,17 @@ a:focus, a:hover {
     transition:all 0.4s;
 }
 .fancy-btn:hover{
-    color:#333;
+    color:#fff;
 }
 .fancy-btn:hover:after{
-    border:2px solid #333;
+    border:2px solid #fff;
     width: calc(100% - 10px);
     height: calc(100% + 10px);
 }
 .header-order button {
-    color: #333;
+    color: #fff;
     background-color: transparent;
-    border-bottom: 2px dotted #333;
+    border-bottom: 2px dotted #fff;
     border-right: 0;
     border-left: 0;
     border-top: 0;
@@ -130,7 +144,7 @@ button.close {
 }
 .navbar-default .navbar-nav > li > a {
     border-bottom: none;
-    color: #333;
+    color: #fff;
     font-weight: bold;
     overflow: hidden;
 }
@@ -226,6 +240,7 @@ button.close {
     text-align: center;
     position: relative;
     margin-bottom: 40px;
+    color: #fff;
 }
 .goods-block-main {
     display: flex;
@@ -399,7 +414,6 @@ button.close {
 }
 .grey-line-page {
     background-color: #fafafa;
-    margin-bottom: 40px;
 }
 .flex-sale-cart-block {
     display: flex;
@@ -424,8 +438,8 @@ button.close {
 .footer-page {
     background-color: #333;
     padding: 40px 0;
-    margin-top: 50px;
     color: #fff;
+    position: relative;
 }
 .footer-flex-block {
     display: flex;
@@ -501,6 +515,7 @@ button.close {
     margin-top: 15px;
     text-align: center;
     font-weight: bold;
+    color: #fff;
 }
 .owl-shares {
     margin-bottom: 40px;
@@ -772,6 +787,48 @@ button.close {
     z-index: 111;
     border-bottom: 3px solid #333;
     background-color: #fff;
+}
+.black-line-menu.fixed a {
+    color: #333;
+}
+.video-background {
+    background: #000;
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: -99;
+}
+#vidtop-content {
+    top: 0;
+}
+.overlay-video {
+    background: rgba(0,0,0,0.6);
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+}
+.main-page-title {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    top: 300px;
+    position: absolute;
+    z-index: 11;
+    color: #fff;
+}
+.main-page-title h1:before, .main-page-title h1:after {
+    background: #fff;
+}
+.background-image-block .button-center .fancy-btn, .background-image-block .button-center .fancy-btn:after, .grey-line-page .fancy-btn, .grey-line-page .fancy-btn:after {
+    color: #333;
+    border-color: #333;
+}
+@media (min-aspect-ratio: 16/9) {
+ .video-foreground { height: 300%; top: -100%; }
+}
+@media (max-aspect-ratio: 16/9) {
+ .video-foreground { width: 300%; left: -100%; }
 }
 @keyframes animate {
     0% {
