--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ button.close {
     position: absolute;
     height: 2px;
     width: 100px;
-    background: #333;
+    background: #fff;
     top: 20px;
     margin: 0 auto;
     left: 0;
@@ -229,7 +229,7 @@ button.close {
     position: absolute;
     height: 2px;
     width: 100px;
-    background: #333;
+    background: #fff;
     bottom: 10px;
     margin: 0 auto;
     left: 0;
@@ -523,11 +523,12 @@ button.close {
     padding: 15px 0 15px 0;
 }
 .breadcrumb a, .breadcrumb span {
-    color: #333;
+    color: #fff;
     padding: 0 2px;
+    border-bottom: 1px solid #fff;
 }
 .breadcrumb > .active {
-    color: #333;
+    color: #fff;
 }
 .breadcrumb a:hover {
     border-bottom: none;
@@ -574,6 +575,10 @@ button.close {
 }
 .good-main-content {
     width: 76%;
+    color: #fff;
+}
+.good-main-content a {
+    color: #fff;
 }
 .roots-aside-block {
     padding-left: 0;
@@ -598,7 +603,7 @@ button.close {
     width: 100%;
 }
 .good-main-content table td, .good-main-content table th {
-    border: 1px solid #333;
+    border: 1px solid #fff;
     padding: 7px;
 }
 .good-main-content table td a:hover {
@@ -678,10 +683,14 @@ button.close {
     text-align: right;
 }
 .news-block {
-    border: 1px solid #cbcbcb;
+    border: 1px solid #fff;
     margin-bottom: 25px;
     display: flex;
     align-items: center;
+    color: #fff;
+}
+.news-block a {
+    color: #fff;
 }
 .news-block-img {
     width: 25%;
@@ -896,6 +905,9 @@ button.close {
 }
 .sign-up-flex-item-input input {
     width: 100%;
+}
+.header-no-main-page {
+    position: initial;
 }
 @media (min-aspect-ratio: 16/9) {
  .video-foreground { height: 300%; top: -100%; }
