--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,9 @@ button.close {
     display: block;
     margin-bottom: 5px;
 }
+.footer-logo a {
+    border-bottom: none;
+}
 .footer-flex-block a:hover {
     text-decoration: underline;
 }
